crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@434.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select count(*) from test_multirange_gist where mr && int4range(10,20);"
---
SelectStmt@0..71
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..14
    FuncCall@7..14
      Ident@7..12 "count"
      Ascii40@12..13 "("
      Ascii42@13..14 "*"
  Ascii41@14..15 ")"
  Whitespace@15..16 " "
  From@16..20 "from"
  Whitespace@20..21 " "
  RangeVar@21..41
    Ident@21..41 "test_multirange_gist"
  Whitespace@41..42 " "
  Where@42..47 "where"
  Whitespace@47..48 " "
  AExpr@48..69
    ColumnRef@48..50
      Ident@48..50 "mr"
    Whitespace@50..51 " "
    Op@51..53 "&&"
    Whitespace@53..54 " "
    FuncCall@54..69
      Ident@54..63 "int4range"
      Ascii40@63..64 "("
      AConst@64..66
        Iconst@64..66 "10"
      Ascii44@66..67 ","
      AConst@67..69
        Iconst@67..69 "20"
  Ascii41@69..70 ")"
  Ascii59@70..71 ";"

