crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@446.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select count(*) from test_multirange_gist where mr >> int4multirange(int4range(100,200), int4range(400,500));"
---
SelectStmt@0..109
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..14
    FuncCall@7..14
      Ident@7..12 "count"
      Ascii40@12..13 "("
      Ascii42@13..14 "*"
  Ascii41@14..15 ")"
  Whitespace@15..16 " "
  From@16..20 "from"
  Whitespace@20..21 " "
  RangeVar@21..41
    Ident@21..41 "test_multirange_gist"
  Whitespace@41..42 " "
  Where@42..47 "where"
  Whitespace@47..48 " "
  AExpr@48..106
    ColumnRef@48..50
      Ident@48..50 "mr"
    Whitespace@50..51 " "
    Op@51..53 ">>"
    Whitespace@53..54 " "
    FuncCall@54..106
      Ident@54..68 "int4multirange"
      Ascii40@68..69 "("
      FuncCall@69..86
        Ident@69..78 "int4range"
        Ascii40@78..79 "("
        AConst@79..82
          Iconst@79..82 "100"
        Ascii44@82..83 ","
        AConst@83..86
          Iconst@83..86 "200"
      Ascii41@86..87 ")"
      Ascii44@87..88 ","
      Whitespace@88..89 " "
      FuncCall@89..106
        Ident@89..98 "int4range"
        Ascii40@98..99 "("
        AConst@99..102
          Iconst@99..102 "400"
        Ascii44@102..103 ","
        AConst@103..106
          Iconst@103..106 "500"
  Ascii41@106..107 ")"
  Ascii41@107..108 ")"
  Ascii59@108..109 ";"

