crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@453.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT   room_id, range_agg(booked_during)\nFROM     reservations\nGROUP BY room_id\nORDER BY room_id;"
---
SelectStmt@0..99
  Select@0..6 "SELECT"
  Whitespace@6..9 "   "
  ResTarget@9..16
    ColumnRef@9..16
      Ident@9..16 "room_id"
  Ascii44@16..17 ","
  Whitespace@17..18 " "
  ResTarget@18..41
    FuncCall@18..41
      Ident@18..27 "range_agg"
      Ascii40@27..28 "("
      ColumnRef@28..41
        Ident@28..41 "booked_during"
  Ascii41@41..42 ")"
  Newline@42..43 "\n"
  From@43..47 "FROM"
  Whitespace@47..52 "     "
  RangeVar@52..64
    Ident@52..64 "reservations"
  Newline@64..65 "\n"
  GroupP@65..70 "GROUP"
  Whitespace@70..71 " "
  By@71..73 "BY"
  Whitespace@73..74 " "
  ColumnRef@74..81
    Ident@74..81 "room_id"
  Newline@81..82 "\n"
  SortBy@82..98
    Order@82..87 "ORDER"
    Whitespace@87..88 " "
    By@88..90 "BY"
    Whitespace@90..91 " "
    ColumnRef@91..98
      Ident@91..98 "room_id"
  Ascii59@98..99 ";"

