crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@458.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select range_agg(nmr) from (values ('{}'::nummultirange)) t(nmr);"
---
SelectStmt@0..65
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..20
    FuncCall@7..20
      Ident@7..16 "range_agg"
      Ascii40@16..17 "("
      ColumnRef@17..20
        Ident@17..20 "nmr"
  Ascii41@20..21 ")"
  Whitespace@21..22 " "
  From@22..26 "from"
  Whitespace@26..27 " "
  Ascii40@27..28 "("
  RangeSubselect@28..63
    SelectStmt@28..55
      Values@28..34 "values"
      Whitespace@34..35 " "
      Ascii40@35..36 "("
      List@36..55
        TypeCast@36..55
          AConst@36..40
            Sconst@36..40 "'{}'"
          Typecast@40..42 "::"
          TypeName@42..55
            Ident@42..55 "nummultirange"
    Ascii41@55..56 ")"
    Ascii41@56..57 ")"
    Whitespace@57..58 " "
    Alias@58..63
      Ident@58..59 "t"
      Ascii40@59..60 "("
      Ident@60..63 "nmr"
  Ascii41@63..64 ")"
  Ascii59@64..65 ";"

